# serial-stream-rs

./: Cargo.toml  README.md
examples/: 00_get_available_port.rs  01_basic_read_write.rs  02_splitting_streams.rs
src/: lib.rs  purge.rs
src/blocking/: mod.rs  read_half.rs  stream.rs  write_half.rs
src/blocking/sys/: mod.rs  windows.rs
src/config/: baud_rate.rs  data_bits.rs  direction.rs  flow_control.rs  mod.rs  parity.rs  port.rs  stop_bits.rs
