[package]
name = "serial-stream"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Goodwill Mzumala <fisothemes@egmail.com>"]
repository = "https://github.com/fisothemes/serial-stream-rs"

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Devices_Communication",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }